--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
     "@types/react-dom": "^18.2.14",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-images": "^1.2.0-beta.7",
+    "react-photo-gallery": "^8.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.0",
     "swiper": "^11.0.3",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "express": "^4.18.2",
-    "nodemailer": "^6.9.8",
-    "react-photo-gallery": "^8.0.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -58,7 +58,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/aos": "^3.0.7",
-    "@types/styled-components": "^5.1.29", 
+    "@types/styled-components": "^5.1.29",
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
